static/src/global/app.css
/* Document Level Styles */

/*
  The imports below are needed to include our light dom css for global styles such as fonts and colors.
  You can comment out any of these imports if you do not need that css. For example, if you have your own
  global font family css then you can comment out the typography.css import.
*/

/** Core CSS required for ionic components to work property */
@import '../../node_modules/@ionic/core/css/core.css';

/** Basic CSS for apps built with Ionic */
@import '../../node_modules/@ionic/core/css/display.css';
@import '../../node_modules/@ionic/core/css/normalize.css';
@import '../../node_modules/@ionic/core/css/structure.css';
@import '../../node_modules/@ionic/core/css/typography.css';

/** Optional CSS utils that can be commented out */
@import '../../node_modules/@ionic/core/css/padding.css';
@import '../../node_modules/@ionic/core/css/float-elements.css';
@import '../../node_modules/@ionic/core/css/text-alignment.css';
@import '../../node_modules/@ionic/core/css/text-transformation.css';
@import '../../node_modules/@ionic/core/css/flex-utils.css';

/* Workaround for bug in stencil 4.25.2 and later that causes the corresponding
item in @ionic/core/css/structure.css to hide everything on the page*/
html:not(.hydrated) body {
  display: unset !important;
}

/*
  The CSS Variables below can be used to theme your app.
  For more info on CSS variables check out:
  https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_variables

  More info about color theming using Ionic:
  https://ionicframework.com/docs/theming/color-generator
*/
:root {
  --ion-padding: 8px;
  --ion-margin: 8px;

  --ion-color-primary: #673AB7;
  --ion-color-primary-rgb: 103, 58, 183;
  --ion-color-primary-contrast: #ffffff;
  --ion-color-primary-contrast-rgb: 255, 255, 255;
  --ion-color-primary-shade: #5b33a1;
  --ion-color-primary-tint: #764ebe;

  --ion-color-secondary: #009688;
  --ion-color-secondary-rgb: 0, 150, 136;
  --ion-color-secondary-contrast: #ffffff;
  --ion-color-secondary-contrast-rgb: 255, 255, 255;
  --ion-color-secondary-shade: #008478;
  --ion-color-secondary-tint: #1aa194;

  --ion-color-tertiary: #FF9800;
  --ion-color-tertiary-rgb: 255, 152, 0;
  --ion-color-tertiary-contrast: #000000;
  --ion-color-tertiary-contrast-rgb: 0, 0, 0;
  --ion-color-tertiary-shade: #e08600;
  --ion-color-tertiary-tint: #ffa21a;

  --ion-color-success: #2dd36f;
  --ion-color-success-rgb: 45, 211, 111;
  --ion-color-success-contrast: #ffffff;
  --ion-color-success-contrast-rgb: 255, 255, 255;
  --ion-color-success-shade: #28ba62;
  --ion-color-success-tint: #42d77d;

  --ion-color-warning: #ffc409;
  --ion-color-warning-rgb: 255, 196, 9;
  --ion-color-warning-contrast: #000000;
  --ion-color-warning-contrast-rgb: 0, 0, 0;
  --ion-color-warning-shade: #e0ac08;
  --ion-color-warning-tint: #ffca22;

  --ion-color-danger: #eb445a;
  --ion-color-danger-rgb: 235, 68, 90;
  --ion-color-danger-contrast: #ffffff;
  --ion-color-danger-contrast-rgb: 255, 255, 255;
  --ion-color-danger-shade: #cf3c4f;
  --ion-color-danger-tint: #ed576b;

  --ion-color-dark: #222428;
  --ion-color-dark-rgb: 34, 36, 40;
  --ion-color-dark-contrast: #ffffff;
  --ion-color-dark-contrast-rgb: 255, 255, 255;
  --ion-color-dark-shade: #1e2023;
  --ion-color-dark-tint: #383a3e;

  --ion-color-medium: #92949c;
  --ion-color-medium-rgb: 146, 148, 156;
  --ion-color-medium-contrast: #ffffff;
  --ion-color-medium-contrast-rgb: 255, 255, 255;
  --ion-color-medium-shade: #808289;
  --ion-color-medium-tint: #9d9fa6;

  --ion-color-light: #f4f5f8;
  --ion-color-light-rgb: 244, 245, 248;
  --ion-color-light-contrast: #000000;
  --ion-color-light-contrast-rgb: 0, 0, 0;
  --ion-color-light-shade: #d7d8da;
  --ion-color-light-tint: #f5f6f9;
}

/* This allows text selection by default in mobile browsers, particularly firefox */
:not(.prevent-selection) * {
  -webkit-user-select: auto !important;
  user-select: auto !important;
}

.prevent-selection,
.prevent-selection * {
  -webkit-user-select: none !important;
  user-select: none !important;
}

.fill {
  width: 100%;
}

.hidden {
  visibility: hidden;
}

.top-right {
  position: absolute;
  top: 0;
  right: 0;
}

.top-right-padded {
  position: absolute;
  top: var(--ion-padding, 8px);
  right: var(--ion-padding, 8px);
}

.opacity-75 {
  opacity: 0.75;
}

.send-to-back {
  z-index: -1;
}

.plain {
  white-space: pre-wrap;
}

.single-line {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.force-overflow {
  overflow: visible !important;
}

.zoom {
  transition: transform .2s;
}

.zoom.ion-activated,
.zoom:hover {
  transform: scale(1.05);
  z-index: 1;
}

.show-on-print-only {
  display: none;
}

a.no-style {
  color: inherit;
  text-decoration: none;
}

ion-card-title.ios {
  font-size: 1.4rem;
}

ion-content::part(scroll) {
  touch-action: pan-y pinch-zoom;
}

ion-grid.no-pad {
  --ion-grid-padding: 0px;
  --ion-grid-column-padding: 0px;
}

ion-thumbnail.preview {
  --size: 35px;
  --border-radius: 5px;
}

@media only screen and (max-width: 575.98px) and (max-height: 575.98px) {
  ion-model {
    --width: 100%;
    --height: 100%;
  }
}

@media only screen and (min-width: 576px) and (min-height: 576px) {
  ion-modal {
    --width: 90%;
    --max-width: 1000px;
    --height: 90%;
    --max-height: 1000px;
    --ion-safe-area-top: 0px;
    --ion-safe-area-bottom: 0px;
    --ion-safe-area-right: 0px;
    --ion-safe-area-left: 0px;
  }
}

@media print {
  body {
    position: initial !important;
    max-height: initial !important;
    overflow: auto !important;
  }

  ion-router-outlet {
    overflow: auto !important;
    contain: none !important;
    position: initial !important;
  }

  ion-content {
    --offset-bottom: unset !important;
    display: unset !important;
    position: unset !important;
  }

  .ion-page {
    display: initial !important;
    position: initial !important;
  }

  .show-on-print-only {
    display: initial;
  }

  .hide-on-print {
    display: none !important;
  }
}

